[project]
name = "gptapigateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.3",
    "faststream[cli,kafka]>=0.5.39",
    "gigachat>=0.1.39.post1",
    "gmonitor-lib",
    "httpx>=0.28.1",
    "pydantic-settings==2.9.1",
]

[tool.uv.sources]
gmonitor-lib = { git = "https://github.com/GalinaMonitor/gmonitor-lib.git", rev = "1.0.3" }
